# ai_llms_nn

./: .gitignore  README.md  pyproject.toml
src/neuralnetwork/: README.md  Runner.py  __init__.py  __main__.py
src/neuralnetwork/Datasets/: DataSet.py  DatasetRegistry.py
src/neuralnetwork/Datasets/DummyDataSet/: DummyDataSet.py
src/neuralnetwork/Datasets/DummyPropertyDataSet/: DummyPropertyDataSet.py
src/neuralnetwork/Datasets/Property/: PropertyData.py
src/neuralnetwork/Strategies/: NNBaseStrategy.py  NNStrategiesRegistry.py
src/neuralnetwork/Strategies/Numpy/: NumpyNeuralNetwork.py
src/neuralnetwork/Strategies/Numpy/Utilities/: Definitions.py
src/neuralnetwork/Strategies/Numpy/Utilities/ActivationStrategies/: ActionFunctionStrategyRegistry.py
src/neuralnetwork/Strategies/Numpy/Utilities/CostDerivativeStrategies/: CostDerivateStrategyRegistry.py
src/neuralnetwork/Strategies/PyTorch/: PyTorchNeuralNetwork.py
src/neuralnetwork/Strategies/TensorFlow/: TensorFlowNeuralNetwork.py
src/neuralnetwork/Strategies/Vanilla/: VanillaNeuralNetwork.py
src/neuralnetwork/Strategies/Vanilla/Layer/: LayerBase.py
src/neuralnetwork/Strategies/Vanilla/Layer/Entry/: EntryLayer.py
src/neuralnetwork/Strategies/Vanilla/Layer/Hidden/: HiddenLayer.py
src/neuralnetwork/Strategies/Vanilla/Utilities/: Definitions.py  Utilities.py
src/neuralnetwork/Utilities/: Definitions.py
src/neuralnetwork/Utilities/ActivationStrategies/: ActivationFunctionStrategy.py  __init__.py
src/neuralnetwork/Utilities/CostDerivativeStrategies/: CostDerivateStrategy.py  __init__.py
(+7 files in other folders)
