[project]
packages = [
    { include = "NeuralNetwork", from = "./src" }
]
name = "NeuralNetwork"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
]


[tool.poetry.scripts]
neuralnetwork = "neuralnetwork:run"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
